<resources>
    <string name="app_name">Pool Finder</string>

    <!--options menu items-->
    <string name="search_item">Search</string>
    <string name="settings_item">Settings</string>
    <string name="review_app_item">Review App</string>

    <!--tab items-->
    <string name="table_locations_tab">Table Locations</string>
    <string name="submit_tables_tab">Submit a Table Location</string>

    <!-- activity_login UI Strings -->
    <string name="email_login_hint">Email</string>
    <string name="password_login_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="skip_login_button">Skip Login</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="create_button">Create</string>
    <string name="back_button">Back</string>
    <string name="empty_email">*Email address cannot be left empty</string>
    <string name="empty_password">*Password cannot be left empty</string>
    <string name="short_password">*Password must be at least 8 characters</string>
    <string name="no_password_match">*Passwords do not match</string>

    <!--settings menu items-->
    <string name="filter">Filter Tables</string>
    <string name="sort">Sort Tables</string>
    <string name="manage_private_locations">Manage private locations</string>
    <string name="sign_out">Sign out</string>

    <!--submit locations-->
    <string name="establishment_hint">Establishment</string>
    <string name="add_location">Add Location</string>
    <string name="rate">Rate the table:</string>
    <string name="description_hint">Description</string>
    <string name="submit_button">Submit</string>
    <string name="imageview_description">Picture of table</string>
    <string name="add_photo_button">Add a photo</string>

    <!-- see locations-->
    <string name="establishment">establishment</string>
    <string name="travel_distance">Distance</string>
    <string name="leave_review">Leave a review</string>
    <string name="location_recorded">Your location was recorded</string>
    <string name="add_a_location">Please add a location</string>

    <!--dialogs-->
    <string name="filter_results">Filter tables by:</string>
    <string name="best">Best pool tables near by</string>
    <string name="rating">Best ratings</string>
    <string name="distance">Closest to me</string>
    <string name="sort_results">Sort tables by:</string>
    <string name="none">None</string>

    <!-- database-->
    <string name="submitted_table">Submitted Pool Table</string>
    <string name="must_log_in">You must be logged in to submit a pool table</string>
    <string name="invalid_entry">Error submitting table. Invalid entry</string>

    <!--login messages-->
    <string name="logged_in">Logged in</string>
    <string name="error_logging_in">Error logging in. Please check your Internet connection</string>

    <!-- poor data for submit-->
    <string name="no_descrip">Please provide a description</string>
    <string name="no_rating">You gave a rating of 0 stars. Are you sure you want this?</string>
</resources>
