<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/filter"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:text="@string/filter"/>

    <Button
        android:id="@+id/sort"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:text="@string/sort"/>

    <Button
        android:id="@+id/manage_privates"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:text="@string/manage_private_locations"/>

    <Button
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:id="@+id/signInButton"
        android:text="@string/sign_in"/>

</LinearLayout>