<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/emailLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_weight="0.03"
        android:ems="10"
        android:hint="@string/email_login_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/passLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.03"
        android:ems="10"
        android:hint="@string/password_login_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/confirmPass"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.03"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:visibility="gone"
        android:paddingLeft="10dp" />

    <TextView
        android:text=""
        android:visibility="gone"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:id="@+id/errorMessage"
        android:layout_weight="0.03" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/createButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/create_button" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:textAllCaps="false"
            android:text="@string/login_button" />
    </RelativeLayout>

    <Button
        android:id="@+id/skipLoginButton"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/skip_login_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />


</LinearLayout>