<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_one_pool_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="marcook_pool.pool_finder.activites.OnePoolLocationActivity">

    <TextView
        android:id="@+id/establishment"
        style="@style/TableCardsStyle"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/establishment"
        android:textColor="@color/text_primary"
        android:textSize="25sp"/>

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/TableCardsStyle"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:isIndicator="true"/>

    <TextView
        android:id="@+id/description"
        style="@style/TableCardsStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/description_hint"
        android:textColor="@color/text_lighter"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/location"
        style="@style/TableCardsStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/travel_distance"
        android:textColor="@color/text_lighter"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/leave_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/leave_review"/>

</LinearLayout>
