<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/locations_color"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/establishment"
                style="@style/TableCardsStyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/establishment"
                android:textColor="@color/text_primary"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/description"
                style="@style/TableCardsStyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/description_hint"
                android:textColor="@color/text_lighter"
                android:textSize="15sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/location"
            style="@style/TableCardsStyle"
            android:layout_marginStart="270dp"
            android:layout_marginTop="50dp"
            android:text="@string/travel_distance"
            android:textColor="@color/text_lighter"
            android:textSize="15sp"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/TableCardsStyle"
            android:layout_marginStart="120dp"
            android:isIndicator="true"/>

        <!-- use to hold long description-->
        <TextView
            android:id="@+id/long_descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </android.support.v7.widget.CardView>

</LinearLayout>